# open_cv_practice

./: README.md  pyproject.toml
basic_input_output/: basic.py
missions/: 1_imaging_1-Mission1.py  1_imaging_2_Mission2.py  3_video_3-Mission3.py  4_processing_2_1-Mission4.py
toy_projects/computer_vision_app/: README.md  pyproject.toml
toy_projects/computer_vision_app/app-client/: capacitor.config.ts  package-lock.json  package.json
toy_projects/computer_vision_app/app-client/src/: main.ts
toy_projects/computer_vision_app/app-client/src/app/: app.component.html  app.component.ts  app.routes.ts  web-socket-service.service.ts
toy_projects/computer_vision_app/app-client/src/app/filter/: filter.page.html  filter.page.spec.ts  filter.page.ts
toy_projects/computer_vision_app/app-client/src/app/mosaic/: mosaic.page.html  mosaic.page.spec.ts  mosaic.page.ts
toy_projects/computer_vision_app/app-client/src/app/trace-object/: trace-object.page.html  trace-object.page.spec.ts  trace-object.page.ts
toy_projects/computer_vision_app/app-server/: hello.py
toy_projects/img-filter-app-client/: ionic.config.json  package-lock.json  package.json
toy_projects/img-filter-app-client/src/app/home/: home.page.html  home.page.ts
toy_projects/img_filter_app/: README.md
toy_projects/img_filter_app/img_filter_app-server/: hello.py
