[tool.poetry]
name = "open_cv_practice"
version = "0.1.0"
description = ""
authors = ["paul <duddnrdpqj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
dlib = "^19.24.6"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
