[tool.poetry]
name = "img-filter-app"
version = "0.1.0"
description = ""
authors = ["paul <duddnrdpqj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
numpy = "^1.9.0"
opencv-python = "^4.10.0.84"
flask-cors = "^5.0.0"
opencv-python-headless = "^4.10.0.84"
flask-socketio = "^5.4.1"
mediapipe = "^0.10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
